EKS-deploy/EKS-K8S-Vault/K8S/server-service/00-Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: server
  labels:
    mesh: dev-demo-eks # AWS App Mesh name
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
